--- a/public/style.css
+++ b/public/style.css
@@ -114,7 +114,18 @@ h2 img {
     margin-right: 15px;
     width: 40px;
     height: 40px;
-    filter: var(--icon-filter); /* Invert icon colors in dark mode */
+}
+
+.logo {
+    border-radius: 50%;
+    margin-right: 15px;
+    width: 50px;
+    height: 50px;
+}
+
+.logo_container {
+    display: flex;
+    align-items: center;
 }
 
 /* Tab styling */
